# osdp

./: .gitignore  .merlin  AUTHORS  CHANGES  INSTALL  META  Makefile  Makefile.in  README  README.md  TODO  _tags  configure.ac  dune-project  global.ml  gros_hack.txt  index.md  myocamlbuild.ml.in  opam  opam.in  osdp.mllib  osdp.odocl  revert_cclib.sh  test.ml
cholesky/: posdef.mli
cholewski/: posdef.ml  posdef.mli  posdef_stubs.c
doc/: Csdp.html  Dualize.Float.html  Dualize.Make.html  Dualize.Q.html  Dualize.S.Scalar.html  Dualize.S.ScalarLinExpr.html  Dualize.S.html  Dualize.html  Ident.Map.html  Ident.Set.html  Ident.html  LinExpr.Float.html  LinExpr.Make.html  LinExpr.MakeScalar.html  LinExpr.Q.html  LinExpr.S.Coeff.html  LinExpr.S.html  LinExpr.html  Lmi.Float.html  Lmi.Make.html  Lmi.Q.html  Lmi.S.Mat.html  Lmi.S.html  Lmi.html  Matrix.Float.html  Matrix.Make.html  Matrix.Q.html  Matrix.S.Coeff.html  Matrix.S.html  Matrix.html  Monomial.Map.html  Monomial.Set.html  Monomial.html  Moseksdp.html  NewtonPolytope.html  Osdp_top.html  Polynomial.Float.html  Polynomial.Make.html  Polynomial.Q.html  Polynomial.S.Coeff.html  (+104 more)
example/: Makefile  _tags  demo.ml  demo_invariant.ml  demo_no_camlp4.ml  demo_no_camlp4_sos2.ml  demo_round.ml  demo_sdp.ml  demo_sdp2.ml  demo_sos.ml  demo_sos2.ml  demo_sos3.ml  demo_sos4.ml
sdp/: LMI.ml  LMI.mli  csdp.ml  csdp.mli  csdp_stubs.c  ident.ml  linExpr.ml  linExpr.mli  matrix.ml  matrix.mli  moseksdp.ml  moseksdp.mli  moseksdp_stubs.c  sdp.ml  sdp.mli
sos/: SOS.ml  SOS.mli  constraints.ml  linearExpr.ml  linearExprVars.ml  measuresTest.ml  moments.ml  monomial.ml  monomial.mli  monomials.ml  polynomial.ml  sos.ml  test.ml
src/: META  META.in  Makefile  Makefile.in  _tags  _tags.in  config.h.in  csdp.ml  csdp.mli  csdp_lexer.mll  csdp_parser.mly  csdp_path.ml.in  csdp_stubs.c  dualize.ml  dualize.mli  dune  ident.ml  ident.mli  libosdp.clib  linExpr.ml  linExpr.mli  lmi.ml  lmi.mli  matrix.ml  matrix.mli  monomial.ml  monomial.mli  monomial_glpk.ml  monomial_glpk_opt.ml.in  moseksdp.ml  moseksdp.mli  moseksdp_stubs.c  myocamlbuild.ml.in  newtonPolytope.ml  newtonPolytope.mli  ocplibSimplexCompat.ml.in  osdp.mllib  osdp.mlpack  osdp.mlpack.in  osdp.odocl  (+35 more)
test/: bench_csv.sh  csv2cost.sh  csv2precision.sh  test.ml  test_linear.ml  test_linear2.ml  test_pi.ml
utils/: location.ml  location.mli  mappe.ml  mappe.mli  report.ml  report.mli  sette.ml  sette.mli  utils.ml  utils.mli
